2009-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1414/cpukit
	* Makefile.am, configure.ac: Tighten math on extraction of index so it
	is harder to trick by passing in a valid id of an incorrect object
	class.
	* sp49/.cvsignore, sp49/Makefile.am, sp49/init.c, sp49/sp49.doc,
	sp49/sp49.scn: New files.

2009-05-19	Chris Johns <chrisj@rtems.org>

	* sp04/tswitch.c: Lower sample count for small memory targets.
	
2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spprintk/init.c: printk() now 100% covered.

2009-05-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spprintk/init.c: More test cases.

2009-05-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen11.c, sp09/sp09.scn: Add case where buffer size is not
	large enough for buffer node overhead.

2009-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, spwatchdog/system.h,
	spwkspace/Makefile.am, spwkspace/init.c: Add shell of test for
	printk. These will help coverage. Simplify spwkspace.
	* spprintk/.cvsignore, spprintk/Makefile.am, spprintk/init.c,
	spprintk/spprintk.scn: New files.
	* spwkspace/system.h: Removed.

2009-05-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: New test to exercise rtems_workspace_XXX
	methods.
	* spwkspace/.cvsignore, spwkspace/Makefile.am, spwkspace/init.c,
	spwkspace/spwkspace.scn, spwkspace/system.h: New files.

2009-05-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/system.h, sp04/task1.c, sp04/tswitch.c, sp07/init.c,
	sp12/init.c, sp13/putbuff.c, sp13/system.h, sp13/task1.c,
	sp15/init.c, sp16/system.h, sp19/fptask.c, sp25/system.h,
	sp26/task1.c, sp27/init.c, sp28/init.c, sp29/init.c, sp31/task1.c,
	sp33/init.c, sp34/changepri.c, sp35/priinv.c, sp37/init.c,
	sp38/init.c, sp39/init.c, sp41/init.c, sp42/init.c, sp43/init.c,
	sp44/init.c, sp45/init.c, sp46/init.c, sp47/init.c, sp48/init.c,
	spfatal03/testcase.h, spfatal05/testcase.h, spfatal06/testcase.h,