@@ -8,8 +8,9 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 SUBDIRS = sp01 sp02 sp03 sp04 sp05 sp06 sp07 sp08 sp09 sp11 sp12 sp13 sp14 \
     sp15 sp16 sp17 sp19 sp20 sp21 sp22 sp23 sp24 sp25 sp26 sp27 sp28 sp29 \
     sp30 sp31 sp32 sp33 sp34 sp35 sp37 sp38 sp39 sp40 sp41 sp42 sp43 sp44 \
-    sp45 sp46 sp47 sp48 sp49 spsize spwatchdog spfatal01 spfatal02 spfatal03 \
-    spfatal04 spfatal05 spfatal06 spfatal07 spfatal08 spfatal09 spobjgetnext \
+    sp45 sp46 sp47 sp48 sp49 sp50 spsize spwatchdog \
+    spfatal01 spfatal02 spfatal03 spfatal04 spfatal05 spfatal06 spfatal07 \
+    spfatal08 spfatal09 spobjgetnext \
     spprintk spwkspace
  
 DIST_SUBDIRS = $(SUBDIRS) spfatal spfatal_support
