@@ -1,0 +1,23 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  sp50
+
+directives:
+
+  rtems_timer_initiate_server
+  rtems_timer_server_fire_after
+
+concepts:
+
++ Ensure that a server based timer can repeatedly schedule itself to fire.
