@@ -1,0 +1,12 @@
+*** TEST 50 ***
+Timer fired at 0
+Timer fired at 1
+Timer fired at 2
+Timer fired at 3
+Timer fired at 4
+Timer fired at 5
+Timer fired at 6
+Timer fired at 7
+Timer fired at 8
+Timer fired at 9
+*** END OF TEST 50 ***
