@@ -1,5 +1,14 @@
 2009-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	PR 1413/cpukit
+	* Makefile.am, configure.ac: Add test for case where server based
+	timers which reinitiated themselves did not get reinserted onto timer
+	chain.
+	* sp50/.cvsignore, sp50/Makefile.am, sp50/init.c, sp50/sp50.doc,
+	sp50/sp50.scn: New files.
+
+2009-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	PR 1414/cpukit
 	* Makefile.am, configure.ac: Tighten math on extraction of index so it
 	is harder to trick by passing in a valid id of an incorrect object
